--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Profile
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,5 +13,26 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-list>
+    <ion-item>
+      <ion-label>
+        <h2>Nama:</h2>
+        <p>Fajar Dian Dwi Cahyo</p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        <h2>Program Studi:</h2>
+        <p>Teknik Informatika</p>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        <h2>NPM:</h2>
+        <p>092022090220</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <app-explore-container name=""></app-explore-container>
 </ion-content>
