--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -25,6 +25,7 @@
       <ion-card-title>{{ article.title }}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
+      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=500&q=60" />
       {{ article.content }}
     </ion-card-content>
   </ion-card>
